# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2024 CERN.
# Copyright (C) 2024 Graz University of Technology.
#
# Flask-OAuthlib is free software; you can redistribute it and/or modify it
# under the terms of the BSD 3 Clause License; see LICENSE file for more details.

[metadata]
name = Flask-OAuthlib-Invenio
version = attr: flask_oauthlib.__version__
description = OAuthlib for Flask.
long_description = file: README.rst
keywords = flask OAuth2
license = BSD
author = flask_oauthlib.__author__
author_email = flask_oauthlib.__email__
platforms = any
url = https://github.com/inveniosoftware/flask-oauthlib-invenio
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    Flask>=3.0
    cachelib>=0.13.0
    oauthlib>=3.0.0
    requests-oauthlib>=1.0

[options.extras_require]
tests =
    pytest-black-ng>=0.4.0
    pytest-invenio>=3.0.0,<4.0.0
    mock>=5.1.0

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=flask_oauthlib --cov-report=term-missing
testpaths = tests flask_oauthlib
